2004-06-07  Jan Schmidt <thaytan@mad.scientist.com>
	* AUTHORS:
	Add me to the authors file
	* configure.ac:
	Increase the libdv requirement to >= version 0.100
	* ext/dv/gstdvdec.c: (gst_dvdec_init), (gst_dvdec_src_convert),
	(gst_dvdec_src_query), (gst_dvdec_handle_sink_event),
	(gst_dvdec_push), (gst_dvdec_loop), (gst_dvdec_change_state):
	* ext/dv/gstdvdec.h:
	Add support for the new_media flag when sending DISCONT events
	Make the querying work when video pad is not linked

2004-06-07  Tim-Philipp Müller  <t.i.m@zen.co.uk>

	reviewed by Benjamin Otte  <otte@gnome.org>

	* gst/mixmatrix/mixmatrix.c: (gst_mixmatrix_init):
	  create a NULL-initialized array of pads, so we don't think they
	  exist already. (fixes #143130)

2004-06-07  Benjamin Otte  <otte@gnome.org>

	* gst/mixmatrix/mixmatrix.c: (gst_mixmatrix_init),
	(mixmatrix_resize), (gst_mixmatrix_set_all_caps),
	(gst_mixmatrix_request_new_pad), (gst_mixmatrix_loop):
	  don't use // coments

2004-06-07  Benjamin Otte  <otte@gnome.org>

	* ext/alsa/gstalsa.c: (gst_alsa_samples_to_timestamp):
	  cast to GstClockTime to get higher granularity
	* ext/alsa/gstalsasink.c: (gst_alsa_sink_check_event):
	  use gst_element_set_time_delay to get the exact time
	* ext/mad/gstmad.c: (gst_mad_chain):
	  use the negotiated rate instead of the current frame's rate which
	  might be wrong because of bit errors. This avoids emitting totally
	  bogus timestamps and screwing sync.
	(fixes #143454)

2004-06-07  Tim-Philipp Müller  <t.i.m@zen.co.uk>

	reviewed by Benjamin Otte  <otte@gnome.org>

	* gst/adder/gstadder.c: (gst_adder_loop):
	  properly error out when no negotiation has happened yet. (fixes
	  #143032)

2004-06-06  Benjamin Otte  <otte@gnome.org>

	* ext/mad/gstid3tag.c: (gst_id3_tag_handle_event):
	  forward correctly transformed offset in discont events. Based on
	  patch by Arwed v. Merkatz. (fixes #142851)

2004-06-06  David Schleef  <ds@schleef.org>

	* gst/ffmpegcolorspace/gstffmpegcodecmap.c: that's